--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,5 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   flyway:
       baseline-on-migrate: true
+  jackson:
+    default-property-inclusion: non_null
